# react-native-swipe-predictor

./: .eslintrc.js  .gitignore  .npmignore  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  package.json  react-native-swipe-predictor.podspec  rn-swipe-predictor.podspec  tsconfig.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/swipepredictor/: Prediction.kt  SwipePredictorModule.kt  SwipePredictorPackage.kt
docs/: API.md  platform-physics.md  potential-improvements.md
example/: App.tsx  EXAMPLE_APP_PLAN.md  README.md  app.json  babel.config.js  benchmarks.tsx  index.ts  metro.config.js  package.json  setup.sh  tsconfig.json
example/demos/: DemoSelector.tsx  ImageGallery.tsx  InstagramStories.tsx  TinderCards.tsx
example/screens/: BasicDemo.tsx  CardsDemo.tsx  GalleryDemo.tsx  GameDemo.tsx
example/utils/: gestureHelpers.ts
examples/image-gallery/: ImageGallery.tsx
examples/navigation-drawer/: NavigationDrawer.tsx
examples/tinder-cards/: TinderCards.tsx
ios/SwipePredictor/: SwipePredictorModule.m  SwipePredictorModule.swift
scripts/: postbuild.js
src/: index.ts
src/benchmarks/: performance.ts
src/js/: types.ts
src/js/components/: SwipePredictorDebugOverlay.tsx
src/js/helpers/: index.ts  usePredictiveCards.tsx  usePredictiveImageGallery.tsx  usePredictiveNavigation.tsx
src/js/hooks/: useSwipePredictor.tsx  useSwipePredictorWithMetrics.tsx
src/js/native/: SwipePredictorModule.ts
src/rust/: Cargo.toml  build-android.sh  build-ios.sh
src/rust/src/: android.rs  error.rs  ffi.rs  ios_bridge.rs  lib.rs  physics.rs  predictor.rs  types.rs
src/rust/tests/: concurrent_test.rs  integration_test.rs
usage-examples/image-gallery/: ImageGallery.tsx
usage-examples/navigation-drawer/: NavigationDrawer.tsx
