[package]
name = "swipe_predictor"
version = "1.0.0"
edition = "2021"

[lib]
name = "swipe_predictor"
crate-type = ["staticlib", "cdylib"]

[dependencies]

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
