[package]
name = "swipe_predictor"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "High-performance swipe gesture prediction library"
license = "MIT"

[lib]
name = "swipe_predictor"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["ffi"]
ffi = []

[dependencies]
# No longer need once_cell for global state!

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[dev-dependencies]
# For benchmarking if needed in future
# criterion = "0.5"
