[package]
name = "swipe_predictor"
version = "1.0.0"
edition = "2021"
authors = ["Your Name"]
description = "High-performance swipe gesture prediction library"
license = "MIT"

[lib]
name = "swipe_predictor"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["ffi"]
ffi = []

[dependencies]
# No longer need once_cell for global state!

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[profile.release]
opt-level = "z"     # Optimize for size rather than speed
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip debug symbols
panic = "abort"     # Smaller panic handler
overflow-checks = false  # Disable overflow checks in release

[profile.dev]
opt-level = 1

[dev-dependencies]
# For benchmarking if needed in future
# criterion = "0.5"
